version/0.10/_sources/getting_started/index.rst.txt
.. _getting_started:

===============
Getting started
===============

This section explains how to install the PyAEDT Common Toolkit.
It then explains this toolkit's architecture and provides an example
of how to use its common methods to develop a new Ansys
Electronics Desktop (AEDT) toolkit.

.. grid:: 2

    .. grid-item-card:: Installation :fa:`book-bookmark`
        :padding: 2 2 2 2
        :link: installation
        :link-type: doc

        Learn how to install the PyAEDT Common Toolkit.
        
        
    .. grid-item-card:: Architecture :fa:`person-running`
        :padding: 2 2 2 2
        :link: architecture
        :link-type: doc

        Learn about this toolkit's architecture.


    .. grid-item-card:: Example toolkit :fa:`scroll`
        :padding: 2 2 2 2
        :link: example_toolkit
        :link-type: doc

        Use this toolkit's common methods to create an example toolkit.


.. toctree::
   :hidden:
   :maxdepth: 2

   installation
   architecture
   example_toolkit
