version/0.16/_sources/getting_started/index.rst.txt
.. _getting_started:

===============
Getting started
===============

This section explains how to install the PyAEDT Common Toolkit.
It then explains this toolkit's architecture and provides an example
of how to use its common methods to develop a new Ansys
Electronics Desktop (AEDT) toolkit.

.. grid:: 2

    .. grid-item-card:: Installation :fa:`book-bookmark`
        :padding: 2 2 2 2
        :link: installation
        :link-type: doc

        Learn how to install the PyAEDT Common Toolkit.


    .. grid-item-card:: Architecture :fa:`person-running`
        :padding: 2 2 2 2
        :link: architecture
        :link-type: doc

        Learn about this toolkit's architecture.

    .. grid-item-card:: Toolkit project setup :fa:`computer`
        :padding: 2 2 2 2
        :link: toolkit_setup
        :link-type: doc

        Learn basic concepts that will help you setup your own toolkit project.


    .. grid-item-card:: Example toolkit :fa:`scroll`
        :padding: 2 2 2 2
        :link: example_toolkit
        :link-type: doc

        Use this toolkit's common methods to create an example toolkit.


.. toctree::
   :hidden:
   :maxdepth: 2

   installation
   architecture
   toolkit_setup
   example_toolkit
